@@ -129,15 +129,19 @@ megabytes.
 .TP 10
 \fB-s\fP or \fB-s+\fP
 Behave as if each pattern has the \fB/S\fP modifier; in other words, force each
-pattern to be studied. If \fB-s+\fP is used, the PCRE_STUDY_JIT_COMPILE flag is
+pattern to be studied. If \fB-s+\fP is used, all the JIT compile options are
 passed to \fBpcre[16]_study()\fP, causing just-in-time optimization to be set
-up if it is available. If the \fB/I\fP or \fB/D\fP option is present on a
-pattern (requesting output about the compiled pattern), information about the
-result of studying is not included when studying is caused only by \fB-s\fP and
-neither \fB-i\fP nor \fB-d\fP is present on the command line. This behaviour
-means that the output from tests that are run with and without \fB-s\fP should
-be identical, except when options that output information about the actual
-running of a match are set.
+up if it is available, for both full and partial matching. If \fB-s++\fP is 
+used, the text "(JIT)" is added to the first output line after a match or no 
+match when JIT-compiled code was actually used.
+.P
+If the \fB/I\fP or \fB/D\fP option is present on a pattern (requesting output
+about the compiled pattern), information about the result of studying is not
+included when studying is caused only by \fB-s\fP and neither \fB-i\fP nor
+\fB-d\fP is present on the command line. This behaviour means that the output
+from tests that are run with and without \fB-s\fP should be identical, except
+when options that output information about the actual running of a match are
+set.
 .sp
 The \fB-M\fP, \fB-t\fP, and \fB-tm\fP options, which give information about
 resources used, are likely to produce different output with and without
@@ -316,7 +320,7 @@ contains multiple copies of the same substring. If the \fB+\fP modifier appears
 twice, the same action is taken for captured substrings. In each case the
 remainder is output on the following line with a plus character following the
 capture number. Note that this modifier must not immediately follow the /S
-modifier because /S+ has another meaning.
+modifier because /S+ and \S++ have other meanings.
 .P
 The \fB/=\fP modifier requests that the values of all potential captured
 parentheses be output after a match. By default, only those up to the highest
@@ -936,6 +940,6 @@ Cambridge CB2 3QH, England.
 .rs
 .sp
 .nf
-Last updated: 14 January 2012
+Last updated: 20 February 2012
 Copyright (c) 1997-2012 University of Cambridge.
 .fi
